# aging-lora

./: .gitignore  FUTURE_WORK.md  HUMAN_TASKS.md  LANDSCAPE.md  README.md  ROADMAP.md  f_expts_review.md  g_expts_review.md  pyproject.toml
.research/: state.json
compute/: archive_runtime_log.headbug-failed.csv  runtime_log.csv
data/: aida_split.json  checkpoint_hashes.txt  cohort_summary.csv  detectability_floor.json  leakage_audit.csv  loco_folds.json
methods/: detectability_floor.md  leakage_audit_notes.md  loco_baselines.md  pretrained_lasso_sanity_check.md  terekhova_chemistry_shift.md
notes/: README.md  autonomous_session_2026-04-29.md  decision_rules_phase3.md  methodology_diffs_vs_tf_paper.md  open_questions.md  paper_draft_v0.md  paper_figures_inventory.md  paper_outline.md  paper_outline_drafts.md  paper_tables_inventory.md  phase3_cloud_compute_review.md  phase3_cloud_launch_prerequisites.md  phase3_geneformer_convergence.md  phase3_kickoff.md  phase3a_autonomous_window_summary.md  research_journal.md  surprises_and_caveats.md
roadmap/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
scripts/: bootstrap_layer_asymmetry_cis.py  compile_paper_numbers.py  d21_rank32_3seed_ridge.py  d22_nk_3seed_ridge.py  d25_three_way_comparison.py  d31_donor_cluster_analysis.py  d32_rank16_3seed_bootstrap_cis.py  d36_mae_ci_overlap.py  d37_cv_layer_selection.py  donor_ridge.py  donor_ridge_concat.py  donor_ridge_layered.py  donor_ridge_layered_finetune.py  donor_ridge_layered_post_finetune.py  donor_ridge_pseudobulk_extend.py  donor_ridge_scfoundation.py  (+53 more)
(+322 files in other folders)
