[project]
name = "immune-aging-clock"
version = "0.1.0"
description = "Foundation-model fine-tuning for cell-type-specific immune aging clocks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Single-cell analysis
    "scanpy>=1.10",
    "anndata>=0.10",
    # Data science stack
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    # Deep learning
    "torch>=2.2",
    "peft>=0.10",
    "transformers>=4.40",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Utilities
    "tqdm>=4.66",
    "requests>=2.31",
    "GEOparse>=2.0",
    "synapseclient>=4.4",
    "rich>=13.7",
    "rdata>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
